--- a/spec/fixtures/cassettes/basic_crud_delete_fail.yml
+++ b/spec/fixtures/cassettes/basic_crud_delete_fail.yml
@@ -2,41 +2,43 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage506da7d1-4cb8-4aa1-bc50-455e7ed8ef02
+    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage16de81aa-036e-410f-a2c8-c96bddcdf39a
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Content-Type:
       - application/json
       Authorization:
       - ApiKey testuser:key
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
+      - '*/*'
   response:
     status:
       code: 404
       message: NOT FOUND
     headers:
       Date:
-      - Sat, 16 Mar 2013 01:17:55 GMT
+      - Fri, 29 Mar 2013 02:07:16 GMT
       Server:
       - Apache/2.2.22 (Ubuntu)
       Access-Control-Allow-Origin:
-      - ! '*'
+      - '*'
       Access-Control-Allow-Methods:
       - POST,GET,OPTIONS,PUT,DELETE
       Vary:
       - Accept-Encoding
       Content-Length:
-      - '0'
+      - '20'
       Content-Type:
       - text/html; charset=utf-8
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     http_version: 
-  recorded_at: Sat, 16 Mar 2013 01:17:24 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:31 GMT
 recorded_with: VCR 2.4.0
