--- a/spec/fixtures/cassettes/basic_crud_delete_success.yml
+++ b/spec/fixtures/cassettes/basic_crud_delete_success.yml
@@ -2,30 +2,32 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage533b1957-d395-4edf-81a6-f38a60f1459c
+    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage16de81aa-036e-410f-a2c8-c96bddcdf39a
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Content-Type:
       - application/json
       Authorization:
       - ApiKey testuser:key
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
+      - '*/*'
   response:
     status:
       code: 204
       message: NO CONTENT
     headers:
       Date:
-      - Sat, 16 Mar 2013 01:07:51 GMT
+      - Fri, 29 Mar 2013 02:07:15 GMT
       Server:
       - Apache/2.2.22 (Ubuntu)
       Access-Control-Allow-Origin:
-      - ! '*'
+      - '*'
       Access-Control-Allow-Methods:
       - POST,GET,OPTIONS,PUT,DELETE
       Content-Length:
@@ -35,8 +37,8 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     http_version: 
-  recorded_at: Sat, 16 Mar 2013 01:07:20 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:31 GMT
 recorded_with: VCR 2.4.0
