--- a/spec/fixtures/cassettes/basic_crud_page_by_name_success.yml
+++ b/spec/fixtures/cassettes/basic_crud_page_by_name_success.yml
@@ -2,39 +2,39 @@
 http_interactions:
 - request:
     method: get
-    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage15281b20-6503-4cbc-9974-4b92f74b9e3e?format=json
+    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage16de81aa-036e-410f-a2c8-c96bddcdf39a?format=json
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - '*/*'
-      User-Agent:
-      - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 18 Mar 2013 15:57:11 GMT
+      - Fri, 29 Mar 2013 02:07:15 GMT
       Server:
       - Apache/2.2.22 (Ubuntu)
       Access-Control-Allow-Origin:
       - '*'
       Access-Control-Allow-Methods:
       - POST,GET,OPTIONS,PUT,DELETE
-      Content-Type:
-      - application/vnd.api.v1+json;charset=utf-8
       Transfer-Encoding:
       - chunked
+      Content-Type:
+      - application/vnd.api.v1+json; charset=utf-8
     body:
       encoding: UTF-8
-      string: '{"content": "<p>Created!</p>", "id": 347, "map": null, "name": "TestPage15281b20-6503-4cbc-9974-4b92f74b9e3e",
-        "page_tags": null, "resource_uri": "/api/page/TestPage15281b20-6503-4cbc-9974-4b92f74b9e3e",
-        "slug": "testpage15281b20-6503-4cbc-9974-4b92f74b9e3e"}'
+      string: '{"content": "<p>Created!</p>", "id": 364, "map": null, "name": "TestPage16de81aa-036e-410f-a2c8-c96bddcdf39a",
+        "page_tags": null, "resource_uri": "/api/page/TestPage16de81aa-036e-410f-a2c8-c96bddcdf39a",
+        "slug": "testpage16de81aa-036e-410f-a2c8-c96bddcdf39a"}'
     http_version: 
-  recorded_at: Mon, 18 Mar 2013 15:56:37 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:30 GMT
 recorded_with: VCR 2.4.0
