--- a/spec/fixtures/cassettes/basic_crud_read_fail.yml
+++ b/spec/fixtures/cassettes/basic_crud_read_fail.yml
@@ -2,51 +2,39 @@
 http_interactions:
 - request:
     method: get
-    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage506da7d1-4cb8-4aa1-bc50-455e7ed8ef02?format=json
+    uri: http://ec2-54-234-151-52.compute-1.amazonaws.com/api/page/TestPage16de81aa-036e-410f-a2c8-c96bddcdf39a?format=json
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
+      - '*/*'
   response:
     status:
       code: 404
-      message: !binary |-
-        Tk9UIEZPVU5E
+      message: NOT FOUND
     headers:
-      !binary "RGF0ZQ==":
-      - !binary |-
-        U2F0LCAxNiBNYXIgMjAxMyAwMToxNzo1NSBHTVQ=
-      !binary "U2VydmVy":
-      - !binary |-
-        QXBhY2hlLzIuMi4yMiAoVWJ1bnR1KQ==
-      !binary "QWNjZXNzLUNvbnRyb2wtQWxsb3ctT3JpZ2lu":
-      - !binary |-
-        Kg==
-      !binary "QWNjZXNzLUNvbnRyb2wtQWxsb3ctTWV0aG9kcw==":
-      - !binary |-
-        UE9TVCxHRVQsT1BUSU9OUyxQVVQsREVMRVRF
-      !binary "VmFyeQ==":
-      - !binary |-
-        QWNjZXB0LUVuY29kaW5n
-      !binary "Q29udGVudC1FbmNvZGluZw==":
-      - !binary |-
-        Z3ppcA==
-      !binary "Q29udGVudC1MZW5ndGg=":
-      - !binary |-
-        MjA=
-      !binary "Q29udGVudC1UeXBl":
-      - !binary |-
-        dGV4dC9odG1sOyBjaGFyc2V0PXV0Zi04
+      Date:
+      - Fri, 29 Mar 2013 02:07:16 GMT
+      Server:
+      - Apache/2.2.22 (Ubuntu)
+      Access-Control-Allow-Origin:
+      - '*'
+      Access-Control-Allow-Methods:
+      - POST,GET,OPTIONS,PUT,DELETE
+      Vary:
+      - Accept-Encoding
+      Content-Length:
+      - '20'
+      Content-Type:
+      - text/html; charset=utf-8
     body:
-      encoding: ASCII-8BIT
-      string: !binary |-
-        H4sIAAAAAAAAAwMAAAAAAAAAAAA=
+      encoding: UTF-8
+      string: ''
     http_version: 
-  recorded_at: Sat, 16 Mar 2013 01:17:24 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:31 GMT
 recorded_with: VCR 2.4.0
