--- a/spec/fixtures/cassettes/fetch.yml
+++ b/spec/fixtures/cassettes/fetch.yml
@@ -7,23 +7,23 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
+      - '*/*'
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Sat, 16 Mar 2013 05:14:50 GMT
+      - Fri, 29 Mar 2013 02:07:17 GMT
       Server:
       - Apache/2.2.22 (Ubuntu)
       Access-Control-Allow-Origin:
-      - ! '*'
+      - '*'
       Access-Control-Allow-Methods:
       - POST,GET,OPTIONS,PUT,DELETE
       Transfer-Encoding:
@@ -31,8 +31,8 @@ http_interactions:
       Content-Type:
       - application/vnd.api.v1+json; charset=utf-8
     body:
-      encoding: US-ASCII
-      string: ! '{"domain": "example.com", "id": 1, "language_code": "en-us", "license":
+      encoding: UTF-8
+      string: '{"domain": "example.com", "id": 1, "language_code": "en-us", "license":
         "<p>Except where otherwise noted, this content is licensed under a <a rel=\"license\"
         href=\"http://creativecommons.org/licenses/by/3.0/\">Creative Commons Attribution
         License</a>. See <a href=\"/Copyrights\">Copyrights.</p>", "name": "example.com",
@@ -42,5 +42,5 @@ http_interactions:
         See <a href=\"/Copyrights\" target=\"_blank\">Copyrights</a>.", "time_zone":
         "America/Chicago"}'
     http_version: 
-  recorded_at: Sat, 16 Mar 2013 05:14:19 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:33 GMT
 recorded_with: VCR 2.4.0
