--- a/spec/fixtures/cassettes/list_page_tags_success.yml
+++ b/spec/fixtures/cassettes/list_page_tags_success.yml
@@ -7,29 +7,29 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - '*/*'
-      User-Agent:
-      - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 18 Mar 2013 15:52:36 GMT
+      - Fri, 29 Mar 2013 02:07:22 GMT
       Server:
       - Apache/2.2.22 (Ubuntu)
       Access-Control-Allow-Origin:
       - '*'
       Access-Control-Allow-Methods:
       - POST,GET,OPTIONS,PUT,DELETE
-      Content-Type:
-      - application/vnd.api.v1+json;charset=utf-8
       Transfer-Encoding:
       - chunked
+      Content-Type:
+      - application/vnd.api.v1+json; charset=utf-8
     body:
       encoding: UTF-8
       string: '{"meta": {"limit": 0, "offset": 0, "total_count": 2}, "objects": [{"id":
@@ -38,5 +38,5 @@ http_interactions:
         "resource_uri": "/api/page_tags/TestPage145d11d3-143d-4e94-9d70-a23b1991a719",
         "tags": ["/api/tag/test_page_145"]}]}'
     http_version: 
-  recorded_at: Mon, 18 Mar 2013 15:52:02 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:38 GMT
 recorded_with: VCR 2.4.0
