--- a/spec/fixtures/cassettes/list_user_success.yml
+++ b/spec/fixtures/cassettes/list_user_success.yml
@@ -7,29 +7,29 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v0.8.7
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - '*/*'
-      User-Agent:
-      - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 18 Mar 2013 15:52:34 GMT
+      - Fri, 29 Mar 2013 02:07:20 GMT
       Server:
       - Apache/2.2.22 (Ubuntu)
       Access-Control-Allow-Origin:
       - '*'
       Access-Control-Allow-Methods:
       - POST,GET,OPTIONS,PUT,DELETE
-      Content-Type:
-      - application/vnd.api.v1+json;charset=utf-8
       Transfer-Encoding:
       - chunked
+      Content-Type:
+      - application/vnd.api.v1+json; charset=utf-8
     body:
       encoding: UTF-8
       string: '{"meta": {"limit": 0, "offset": 0, "total_count": 10}, "objects": [{"date_joined":
@@ -52,5 +52,5 @@ http_interactions:
         "first_name": "testuser", "last_name": "", "resource_uri": "/api/user/9",
         "username": "testuser"}]}'
     http_version: 
-  recorded_at: Mon, 18 Mar 2013 15:52:00 GMT
+  recorded_at: Fri, 29 Mar 2013 02:06:36 GMT
 recorded_with: VCR 2.4.0
