--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ rvm:
   - 2.0.0
   - jruby-19mode # JRuby in 1.9 mode
   - rbx-19mode
+env:
+  - localwiki_client_server=ec2-54-234-151-52.compute-1.amazonaws.com
